<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/register_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <!-- Nume si prenume -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/full_name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:background="@color/white1"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:background="@color/white1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Numar de telefon -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_input_layout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/phone_number"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:background="@color/white1"
            android:inputType="phone"
            android:drawableEnd="@drawable/phone"
            android:paddingEnd="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Parola -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/phone_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@color/white1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirma Parola -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_input_layout"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:background="@color/white1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Selectie adolescent sau parinte -->
    <RadioGroup
        android:id="@+id/role_selection_group"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@color/white1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_adolescent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_adolescent"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radio_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_parent"/>
    </RadioGroup>

    <!-- Button de inregistrare -->
    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        style="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/role_selection_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <!-- Sau -->
    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <!-- Iconita Google -->
    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/google"
        app:layout_constraintTop_toBottomOf="@id/or_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:onClick="onGoogleLoginClick"
        android:contentDescription="@string/google_login"
        />

    <TextView
        android:id="@+id/textViewLoginFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginFail"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_icon" />

    <TextView
        android:id="@+id/textViewSignInMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginSucces"
        android:textColor="@color/green"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>
